fix: bug in responsive with modals, they were not centered

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -8,6 +8,7 @@
         background: transparent;
         border: 0;
         max-width: 800px; 
+        margin: 0 auto;
         width: 90vw; 
         .modal-header{
             border: 0;
@@ -17,5 +18,6 @@
             box-shadow:0px 2px 4px 0px rgb(42 44 47 / 16%), 0px 4px 16px 0px rgb(31 34 37 / 16%);
             padding: 2rem;
         }
+
     }
 }
